# Copyright © 2018-2022 The Twang Contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "twang"
version = "0.8.0"
license = "Apache-2.0 OR MIT OR BSL-1.0"
edition = "2021"
rust-version = "1.56.1"
documentation = "https://docs.rs/twang"
homepage = "https://github.com/AldaronLau/twang/blob/stable/CHANGELOG.md"
repository = "https://github.com/AldaronLau/twang"
readme = "README.md"
description = "Library for pure Rust advanced audio synthesis."
keywords = [
    "audio",
    "synth",
    "synthesizer",
    "wave",
    "sound",
]
categories = [
    "multimedia::audio",
    "multimedia",
    "algorithms",
    "mathematics",
    "no-std",
]
include = ["README.md", "Cargo.toml", "src/*"]

[dependencies]
libm = "0.2"
fon = "0.6"
