[package]
name = "twang"
version = "0.10.0"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
edition = "2021"
rust-version = "1.70.0"
documentation = "https://docs.rs/twang"
homepage = "https://aldaronlau.github.io/twang"
repository = "https://github.com/NibbleRealm/twang"
readme = "README.md"
description = "Library for advanced audio synthesis and mixing"
keywords = [
    "audio",
    "synth",
    "synthesizer",
    "wave",
    "sound",
]
categories = [
    "multimedia::audio",
    "multimedia",
    "algorithms",
    "mathematics",
    "no-std",
]
include = ["README.md", "Cargo.toml", "src/*", "build.rs"]

[dependencies]
libm = "0.2"
fon = "0.6"
traitful = "0.3"

[dev-dependencies]
splotch = "0.0.1"
